--- a/cloudbuild_account.yaml
+++ b/cloudbuild_account.yaml
@@ -23,8 +23,8 @@ steps:
     args:
       - run_tests.sh
     env:
-      - PROJECT_ID=${_PROJECT_ID}
-      - BQ_LOCATION=${_BQ_LOCATION}
+      - PROJECT_ID='data-mesh-domain-data'
+      - BQ_LOCATION='us-central1'
 
   - id: build-source-tables
     name: dataformco/dataform
@@ -33,8 +33,8 @@ steps:
     args:
       - run.sh
     env:
-      - PROJECT_ID=${_PROJECT_ID}
-      - BQ_LOCATION=${_BQ_LOCATION}
+      - PROJECT_ID='data-mesh-domain-data'
+      - BQ_LOCATION='us-central1'
       - DATAFORM_TAGS=init
     
   - id: run-data-checks
@@ -44,8 +44,8 @@ steps:
     args:
       - run.sh
     env:
-      - PROJECT_ID=${_PROJECT_ID}
-      - BQ_LOCATION=${_BQ_LOCATION}
+      - PROJECT_ID='data-mesh-domain-data'
+      - BQ_LOCATION='us-central1'
       - DATAFORM_TAGS=account_data_checks
 
   - id: build-account
@@ -55,8 +55,8 @@ steps:
     args:
       - run.sh
     env:
-      - PROJECT_ID=${_PROJECT_ID}
-      - BQ_LOCATION=${_BQ_LOCATION}
+      - PROJECT_ID='data-mesh-domain-data'
+      - BQ_LOCATION='us-central1'
       - DATAFORM_TAGS=account
   ###########################################################
   # Publish a Pub/Sub message to invoke the next trigger in your pipeline
@@ -67,7 +67,7 @@ steps:
     entrypoint: gcloud
     args: ['pubsub', 'topics', 'publish', 'dataform-deployments', '--message="SUCCESS"', '--attribute=subjectArea="ACCOUNT"']
     env:
-      - PROJECT_ID=${_PROJECT_ID}
-      - BQ_LOCATION=${_BQ_LOCATION}
+      - PROJECT_ID='data-mesh-domain-data'
+      - BQ_LOCATION='us-central1'
 options:
   logging: CLOUD_LOGGING_ONLY
